samples/_failures_safe/1761306030_654da4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7fd3444f.c: In function ‘main’:
./samples/SAFE/__tmp_7fd3444f.c:153:13: error: expected declaration or statement at end of input
  153 |             for (int j = 0; j < n; j++) freeAdjList(&graph[j]);
      |             ^~~
./samples/SAFE/__tmp_7fd3444f.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7fd3444f.c:153:13: error: expected declaration or statement at end of input
